bk_ida/gccida/c1/lookup_expr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_expr/src/gcse.c:3129:24: error: use of undeclared identifier 'machine_mode'
v2 = hash_expr( pat, ( machine_mode)*( ( unsigned __int8 *)pat + 2), do_not_record_p, expr_hash_table_size); 
                       ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/lookup_expr/src/obj/gcse.o] Error 1
